updating at the end of class

--- a/Ajay Portfolio/index.html
+++ b/Ajay Portfolio/index.html
@@ -19,23 +19,23 @@
         </nav>
         <div id="galleryContainer">
             <div class="Slide">
-                <img class="bigImage"src="pictures/IMG_1131.jpg">
+                <img style="width: 700px; height: 500px; object-fit: fill" class="bigImage"src="pictures/IMG_1131.jpg">
             </div>
             <div class="Slide">
-                <img class="bigImage"src="pictures/IMG_1137.jpg">
+                <img style="width: 700px; height: 500px; object-fit: fill" class="bigImage"src="pictures/IMG_1137.jpg">
             </div>
             <div class="Slide">
-                <img class="bigImage"src="pictures/IMG_1140.jpg">
+                <img style="width: 700px; height: 500px; object-fit: fill" class="bigImage"src="pictures/IMG_1140.jpg">
             </div>
             <div class="Slide">
-                <img class="bigImage" src="pictures/IMG_1156.jpg">
+                <img style="width: 700px; height: 500px; object-fit: fill" class="bigImage" src="pictures/IMG_1156.jpg">
             </div>
             <div class="Slide">
-                <img class="bigImage" src="pictures/IMG_1161.jpg">
+                <img style="width: 700px; height: 500px; object-fit: fill" class="bigImage" src="pictures/IMG_1161.jpg">
             </div>
             <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
             <a class="next" onclick="changeSlide(1)">&#10095;</a>
-            <div id="Thumbnails">
+            <div style="width: auto; height: 200px;" id="Thumbnails">
                 
             </div>
         </div>
