--- a/Ajay Portfolio/index.html
+++ b/Ajay Portfolio/index.html
@@ -152,9 +152,16 @@
                 <img class="galleryPic" src="pictures/IMG_1131.jpg">
                 <img class="galleryPic" src="pictures/IMG_1137.jpg">
                 <img class="galleryPic" src="pictures/IMG_1140.jpg">
+            </div>
+            <div class="photoContainer">
                 <img class="galleryPic" src="pictures/IMG_1147.jpg">
                 <img class="galleryPic" src="pictures/IMG_1156.jpg">
                 <img class="galleryPic" src="pictures/IMG_1161.jpg">
+            </div>
+            <div class="photoContainer">
+                <!-- 8/13 lesson clickable video code unfinished/not working-->
+                <video id="myVideo" class="galleryPic" src="videos/Video1.mp4" type="video/mp4" onClick="playVideo">
+                
             </div>
         </div>
         <div id="bottomBar">
