--- a/Ajay Portfolio/index.html
+++ b/Ajay Portfolio/index.html
@@ -160,8 +160,7 @@
             </div>
             <div class="photoContainer">
                 <!-- 8/13 lesson clickable video code unfinished/not working-->
-                <video id="myVideo" class="galleryPic" src="videos/Video1.mp4" type="video/mp4" onClick="playVideo">
-                
+                <video class="galleryPic" src="videos/Video1.mp4" type="video/mp4" controls autoplay>
             </div>
         </div>
         <div id="bottomBar">
