changed vid to gif, updated

--- a/Ajay Portfolio/index.html
+++ b/Ajay Portfolio/index.html
@@ -114,13 +114,21 @@
                     First Full Game as Quarterback
                     <p class="detail">Threw 1 touchdown</p>
                 </li>
+                <br>
+
+                <li>
+                    <h3 class="highlightsHeader">August 17, 2024</h3>
+                    Won 2024 i9 Championship
+                    <p class="detail">Had winning touchdown</p>
+                </li>
+               
 
             </ul>
         </div>
         <div id="resume"  class="contentScreen">
             <h2 onclick="switchPage('home')" class="Title">Resume</h2>
             <ul id="resumeBody">
-                <li>Three Leauges with I9 Football - 2021/2023/2024 - Center, WR, QB</li>
+                <li>Four Leauges with I9 Football - 2021/2023/2024 - Center, WR, QB</li>
                 <br>
                 <li> 
                     Training Since age 7 - Dad as coach                                
@@ -142,6 +150,10 @@
                     Running Weekly - Fitness and Leg Strength
                 </li>
                     <br>
+                <li>
+                        School Soccer - Fitness, Speed and Agility
+                </li>
+                        <br>
 
 
             </ul>
@@ -160,7 +172,7 @@
             </div>
             <div class="photoContainer">
                 <!-- 8/13 lesson clickable video code unfinished/not working-->
-                <video class="galleryPic" src="videos/Video1.mp4" type="video/mp4" controls autoplay>
+                <img class="galleryPic" src="videos/Video1.gif">
             </div>
         </div>
         <div id="bottomBar">
